--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
+    "socket.io-client": "^4.6.1",
     "sort-by": "^0.0.2",
     "use-history": "^1.4.1"
   },
