--- a/socket/package.json
+++ b/socket/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
+    "cross-fetch": "^3.1.5",
+    "fetch": "^1.1.0",
     "install": "^0.13.0",
+    "node-fetch": "^2.6.9",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
   }
