--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.8",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "html-react-parser": "^3.0.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
