--- a/socket/package.json
+++ b/socket/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
     "cross-fetch": "^3.1.5",
+    "express": "^4.18.2",
     "fetch": "^1.1.0",
     "install": "^0.13.0",
     "node-fetch": "^2.6.9",
