Deployment env changes
env variable work

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://localhost:8000
-REACT_APP_SOCKET_URL=http://localhost:8001
-AGORA_API_KEY=your_agora_api_key
+VITE_REACT_APP_API_URL=https://test-deploy-382019.uw.r.appspot.com/
+VITE_REACT_APP_SOCKET_URL=https://socket-service-dot-test-deploy-382019.uw.r.appspot.com/
+VITE_AGORA_API_KEY=your_agora_api_key
