--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,3 @@
-REACT_APP_API_URL=//backendurl
-REACT_APP_SOCKET_URL=//socketurl
+VITE_REACT_APP_API_URL=https://test-deploy-382019.uw.r.appspot.com/
+VITE_REACT_APP_SOCKET_URL=https://socket-service-dot-test-deploy-382019.uw.r.appspot.com/
+VITE_AGORA_API_KEY=your_agora_api_key
