--- a/socket/.env
+++ b/socket/.env
@@ -1,3 +1,3 @@
-FRONTEND_URL = http://localhost:5173
+FRONTEND_URL = https://rattlechat.netlify.app/
 BACKEND_URL = https://test-deploy-382019.uw.r.appspot.com/
 PORT = 8001
