--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,3 +1,4 @@
-REACT_APP_API_URL=http://localhost:8000
-REACT_APP_SOCKET_URL=http://localhost:8001
-AGORA_API_KEY=your_agora_api_key
+VITE_REACT_APP_API_URL=http://localhost:8000
+VITE_REACT_APP_SOCKET_URL=//socketurl
+VITE_REACT_APP_AGORA_APP_ID="ee5c56a2484749c3ae6b2919ec1a001c"
+VITE_REACT_APP_AGORA_APP_CERTIFICATE="e1bbbfe4d4bc466b9a27bdcf71a9756b"
