--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,4 @@
-REACT_APP_API_URL=//backendurl
-REACT_APP_SOCKET_URL=//socketurl
+VITE_REACT_APP_API_URL=http://localhost:8000
+VITE_REACT_APP_SOCKET_URL=//socketurl
+VITE_REACT_APP_AGORA_APP_ID=bc0326d2aa374e21a27f892bc75c4ba4
+VITE_REACT_APP_AGORA_APP_CERTIFICATE=1143ab1bb5d148d3bc966d5e65e1fe21
