--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^6.8.2",
     "socket.io-client": "^4.6.1",
     "sort-by": "^0.0.2",
-    "use-history": "^1.4.1"
+    "use-history": "^1.4.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
