--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://localhost:8000
-REACT_APP_SOCKET_URL=http://localhost:8001
+VITE_REACT_APP_API_URL=https://20230328t145921-dot-test-deploy-382019.uw.r.appspot.com/
+VITE_REACT_APP_SOCKET_URL=https://socket-service-dot-test-deploy-382019.uw.r.appspot.com/
 VITE_REACT_APP_AGORA_APP_ID="ee5c56a2484749c3ae6b2919ec1a001c"
 VITE_REACT_APP_AGORA_APP_CERTIFICATE="e1bbbfe4d4bc466b9a27bdcf71a9756b"
