--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.8",
+    "agora-access-token": "^2.0.4",
     "agora-react-uikit": "^1.2.0",
-    "agora-rtc-sdk-ng": "^4.17.0",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
