--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "mockingoose": "^2.16.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "jest": "^29.5.0",
     "libcrypto": "^0.0.1",
     "mongod": "^2.0.0",
     "mongodb-memory-server": "^8.12.1",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "validator": "^13.9.0"
   },
   "scripts": {
     "test": "jest --runInBand --detectOpenHandles"
