--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,4 @@
 VITE_REACT_APP_API_URL=https://test-deploy-382019.uw.r.appspot.com/
-VITE_REACT_APP_SOCKET_URL=http://localhost:8001/
+VITE_REACT_APP_SOCKET_URL=https://socket-service-dot-test-deploy-382019.uw.r.appspot.com/
 VITE_REACT_APP_AGORA_APP_ID="c14ce4c95ad646818a2efc2d4db072dc"
 VITE_REACT_APP_AGORA_APP_CERTIFICATE="69009efb2bee4d2baaec191251f67525"
