--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "agora": "^0.0.2",
     "agora-access-token": "^2.0.4",
     "agora-token": "^2.0.2",
     "bcrypt": "^5.1.0",
